ganti home jadi index

--- a/cek-status-gizi.html
+++ b/cek-status-gizi.html
@@ -382,11 +382,11 @@
         <div class="container-fluid">
             <div class="d-flex align-items-center">
 
-                <a href="home.html" class="back-link me-3 ms-2" title="Kembali">
+                <a href="index.html" class="back-link me-3 ms-2" title="Kembali">
                     <i class="bi bi-arrow-left" style="color: var(--color-primary);"></i>
                 </a>
 
-                <a class="navbar-brand d-flex align-items-center" href="home.html">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
                     <img src="img/logo-djkn.png" alt="DJKN Logo" class="brand-logo me-2">
                     <span style="font-size: 1.8rem; font-weight: 700;">
                         <span style="color: #006838;">DJKN</span><span style="color: #8cc342;">-CARE</span>
