--- a/isi-piring.html
+++ b/isi-piring.html
@@ -251,11 +251,11 @@
         <div class="container">
 
             <div class="d-flex align-items-center">
-                <a href="home.html" class="me-3 back-link" title="Kembali">
+                <a href="index.html" class="me-3 back-link" title="Kembali">
                     <i class="bi bi-arrow-left" style="font-size:1.4rem; color:var(--color-primary)"></i>
                 </a>
 
-                <a class="navbar-brand d-flex align-items-center" href="home.html">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
                     <img src="img/logo-djkn.png" alt="DJKN Logo" class="brand-logo me-2">
                     <span class="brand-text"><span style="color:var(--color-primary)">DJKN</span><span
                             style="color:var(--color-secondary)">-CARE</span></span>
