--- a/quiz.html
+++ b/quiz.html
@@ -175,7 +175,7 @@
     <div class="quiz-wrapper">
         <div class="quiz-container">
 
-            <a href="home.html" class="btn btn-outline-secondary btn-sm mb-3">← Back</a>
+            <a href="index.html" class="btn btn-outline-secondary btn-sm mb-3">← Back</a>
 
             <h4 class="quiz-title">Uji Pengetahuan Anda! 🧠</h4>
             <div class="quiz-progress">
@@ -195,7 +195,7 @@
                 <p class="fs-1 fw-bold text-success" id="final-score"></p>
                 <p id="result-msg"></p>
 
-                <button class="btn btn-outline-secondary mt-2" onclick="location.href='home.html'">Beranda</button>
+                <button class="btn btn-outline-secondary mt-2" onclick="location.href='index.html'">Beranda</button>
                 <button class="btn btn-main mt-2" onclick="restartQuiz()">Ulangi</button>
             </div>
 
