ubah posisi card (index) & ubah tgl grafik jd hardcode

--- a/cek-status-gizi.html
+++ b/cek-status-gizi.html
@@ -735,7 +735,8 @@
                 hour: '2-digit',
                 minute: '2-digit'
             };
-            const waktuHitung = now.toLocaleDateString('id-ID', options);
+            //const waktuHitung = now.toLocaleDateString('id-ID', options);
+            const waktuHitung = "15 Desember 2025";
             // *** END: PENAMBAHAN TANGGAL DAN JAM ***
 
             // Atur Warna Header Modal
