--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <div class="d-flex align-items-center">
                     <img src="img/logo-djkn.png" alt="DJKN CARE Logo" height="50" class="me-2 me-md-3">
                     <span class="brand-text-djkn" style="font-size: 1.8rem; font-weight: 700;">
-                        <span class="text-djkn" style="color: #006838;">DJKN</span><span class="text-care" style="color: #8cc342;">-CARE</span>
+                        <span class="text-djkn" style="color: #006838;">DJKN</span><span class="text-care"
+                            style="color: #8cc342;">-CARE</span>
                     </span>
                 </div>
 
@@ -142,6 +143,28 @@
             <div class="container">
                 <div class="row g-4">
 
+                    <!-- CARD 4 -->
+                    <div class="col-lg-6 col-md-6">
+                        <div class="p-4 rounded-4 shadow-sm h-100" style="background-color:#FFF2CC;">
+                            <h3 class="h5 fw-bold text-warning mb-3">Apa itu Picky Eater?</h3>
+                            <p>Anak sangat selektif memilih makanan atau menolak mencoba makanan baru.</p>
+                        </div>
+                    </div>
+
+                    <!-- CARD 5 -->
+                    <div class="col-lg-6 col-md-6">
+                        <div class="p-4 rounded-4 shadow-sm h-100" style="background-color:#FFE7A7;">
+                            <h3 class="h5 fw-bold text-warning mb-3">Faktor Picky Eater</h3>
+                            <ul class="mb-0">
+                                <li>Pengaruh orang tua saat makan</li>
+                                <li>Porsi terlalu besar</li>
+                                <li>Waktu makan terlalu lama</li>
+                                <li>Anak dipaksa makan</li>
+                                <li>Lingkungan makan tidak nyaman</li>
+                            </ul>
+                        </div>
+                    </div>
+
                     <!-- CARD 1 -->
                     <div class="col-lg-4 col-md-6">
                         <div class="p-4 rounded-4 shadow-sm h-100" style="background-color:#E2EFDA;">
@@ -175,30 +198,9 @@
                         </div>
                     </div>
 
-                    <!-- CARD 4 -->
-                    <div class="col-lg-6">
-                        <div class="p-4 rounded-4 shadow-sm h-100" style="background-color:#FFF2CC;">
-                            <h3 class="h5 fw-bold text-warning mb-3">Apa itu Picky Eater?</h3>
-                            <p>Anak sangat selektif memilih makanan atau menolak mencoba makanan baru.</p>
-                        </div>
-                    </div>
-
-                    <!-- CARD 5 -->
-                    <div class="col-lg-6">
-                        <div class="p-4 rounded-4 shadow-sm h-100" style="background-color:#FFE7A7;">
-                            <h3 class="h5 fw-bold text-warning mb-3">Faktor Picky Eater</h3>
-                            <ul class="mb-0">
-                                <li>Pengaruh orang tua saat makan</li>
-                                <li>Porsi terlalu besar</li>
-                                <li>Waktu makan terlalu lama</li>
-                                <li>Anak dipaksa makan</li>
-                                <li>Lingkungan makan tidak nyaman</li>
-                            </ul>
-                        </div>
-                    </div>
-
                 </div>
             </div>
+
         </section>
 
         <section class="features-section text-center py-5 bg-light">
